crates/cli-support/tests/snapshots/bundler_js@native_add.snap
---
source: crates/cli-support/tests/test_native_add.rs
expression: output.js()
---
let wasm;
                    export function __wbg_set_wasm(val) {
                        wasm = val;
                    }
