crates/cli-support/tests/snapshots/nodejs_js@add.snap
---
source: crates/cli-support/tests/test_add.rs
expression: output.js()
---
let imports = {};
let wasm;

const path = require('path').join(__dirname, 'add_bg.wasm');
const bytes = require('fs').readFileSync(path);

const wasmModule = new WebAssembly.Module(bytes);
const wasmInstance = new WebAssembly.Instance(wasmModule, imports);
wasm = wasmInstance.exports;
module.exports.__wasm = wasm;
