crates/cli-support/tests/snapshots/nodejs_module_js@add.snap
---
source: crates/cli-support/tests/test_add.rs
expression: output.js()
---
let wasm;
                    export function __wbg_set_wasm(val) {
                        wasm = val;
                    }
