crates/cli-support/tests/snapshots/nodejs_module_start@native_add.snap
---
source: crates/cli-support/tests/test_native_add.rs
expression: output.start().unwrap()
---
let imports = {};
import * as import0 from 'env';
imports['env'] = import0;

import * as path from 'node:path';
import * as fs from 'node:fs';
import * as process from 'node:process';

let file = path.dirname(new URL(import.meta.url).pathname);
if (process.platform === 'win32') {
    file = file.substring(1);
}
const bytes = fs.readFileSync(path.join(file, 'native_add_bg.wasm'));

const wasmModule = new WebAssembly.Module(bytes);
const wasmInstance = new WebAssembly.Instance(wasmModule, imports);
const wasm = wasmInstance.exports;
export const __wasm = wasm;
